# cdp-html-shot

./: .gitignore  Cargo.toml  README.md
examples/: capture_html_with_options.rs  custom_path.rs  shindan_to_img.rs  shot_html.rs  static_instance.rs  tab_goto.rs  take_shots.rs
src/: browser.rs  capture_options.rs  element.rs  exit_hook.rs  general_utils.rs  lib.rs  tab.rs  transport.rs  transport_actor.rs  types.rs  utils.rs
src/browser/: browser_builder.rs  browser_config.rs  browser_utils.rs  temp_dir.rs
